--- a/ConnectionViewerComponent/css/ConnectionViewer.css
+++ b/ConnectionViewerComponent/css/ConnectionViewer.css
@@ -14,7 +14,7 @@
     margin: 5px;
     width: 200px;
     height: 200px;
-    background-color: rgb(59, 121, 183);
+    background-color: green;
     color: white;
     border: solid thin black;
     padding: 5px;
